<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/quick_settings_header">
        <Preference
            app:key="tile_setup"
            app:summary="@string/tile_setup_summary"
            app:title="@string/add_tile_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/access_header">
        <Preference
            app:key="lifetime_access"
            app:summary="@string/trial_checking_play"
            app:title="@string/unlock_lifetime_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/safety_header">
        <Preference
            app:key="accessibility_setup"
            app:summary="@string/accessibility_setup_summary"
            app:title="@string/accessibility_setup_title" />
        <ListPreference
            app:defaultValue="2"
            app:entries="@array/release_key_entries"
            app:entryValues="@array/release_key_values"
            app:key="release_key"
            app:title="@string/release_key_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/feedback_header">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="feedback_start_message"
            app:title="@string/feedback_start_message_title" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="feedback_start_vibration"
            app:title="@string/feedback_start_vibration_title" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="feedback_stop_message"
            app:title="@string/feedback_stop_message_title" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="feedback_stop_vibration"
            app:title="@string/feedback_stop_vibration_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header">
        <ListPreference
            app:entries="@array/app_language_entries"
            app:entryValues="@array/app_language_values"
            app:key="app_language"
            app:persistent="false"
            app:title="@string/app_language_title"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="about"
            app:summary="@string/privacy_license_source_summary"
            app:title="@string/privacy_license_source_title" />
        <Preference
            app:key="app_version"
            app:persistent="false"
            app:title="@string/app_name" />
    </PreferenceCategory>

</PreferenceScreen>
